--- a/README.rdoc
+++ b/README.rdoc
@@ -144,4 +144,6 @@ $ git push heroku master # push to heroku
 $ heroku run rake db:migrate
 $ heroku run rake db:seed
 
+-- restart heroku application
+$ heroku restart
 
